--- a/index.html
+++ b/index.html
@@ -1,52 +1,168 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title>Confidentialité</title>
-    </head>
-    <body>
-Règles de Confidentialité de l’application Cam Detect
-Date de dernière mise à jour : 18/12/2024
-La présente politique de confidentialité décrit comment l’application Cam Detect (développée par Guyllaume M / Industrial Solutions & Applications) collecte, utilise, conserve et protège vos informations lorsque vous utilisez nos services. Nous nous engageons à respecter et protéger votre vie privée conformément aux législations et réglementations en vigueur.
-1. Informations Collectées
-Données fournies par l’utilisateur :
-* Informations de compte : Lors de la création d’un compte, nous pouvons collecter votre adresse e-mail et, le cas échéant, un nom d’utilisateur, afin de vous authentifier et vous offrir une expérience personnalisée.
-* Demandes d’assistance : Si vous nous contactez pour de l’assistance (par e-mail ou via un formulaire), nous pouvons enregistrer votre nom, votre adresse e-mail, et toute autre information volontairement communiquée.
-Données techniques :
-* Informations sur l’appareil : Nous pouvons recueillir des informations sur le type d’appareil, le système d’exploitation, la langue et des identifiants techniques non sensibles pour assurer le bon fonctionnement de l’application.
-* Journal des activités : L’application peut consigner certaines actions (par exemple, un scan réseau) afin de diagnostiquer des problèmes techniques, d’améliorer la qualité du service, et de détecter d’éventuelles utilisations malveillantes.
-2. Utilisation des Données
-Nous utilisons vos informations uniquement aux fins suivantes :
-* Fournir et améliorer nos services : Les données collectées servent à assurer le fonctionnement normal de l’application, améliorer ses fonctionnalités, corriger les bugs et optimiser l’expérience utilisateur.
-* Support technique et assistance : Les informations recueillies lors de vos demandes d’assistance nous permettent de mieux répondre à vos questions et d’améliorer la qualité de notre support.
-* Conformité légale : Le cas échéant, nous pouvons conserver ou divulguer certaines données pour nous conformer à la loi, aux règlements, aux procédures judiciaires ou à une demande gouvernementale.
-3. Partage et Divulgation des Données
-Nous ne vendons pas, ne louons pas et ne partageons pas vos informations personnelles avec des tiers à des fins commerciales. Nous pouvons toutefois partager certaines données avec :
-* Prestataires de services : Certains tiers de confiance (hébergeurs, services de maintenance, outils d’analyse de performances) peuvent avoir accès à des données techniques, strictement nécessaires à la fourniture et l’amélioration de nos services. Ces tiers sont soumis à des obligations contractuelles strictes en matière de confidentialité et de sécurité.
-* Obligations légales : Nous pouvons divulguer des informations si la loi l’exige, par exemple en réponse à une décision de justice, une assignation à comparaître ou une autre procédure légale.
-4. Conservation des Données
-Nous conservons vos données personnelles aussi longtemps que nécessaire pour :
-* Fournir nos services,
-* Répondre aux demandes d’assistance,
-* Respecter nos obligations légales,
-* Résoudre des litiges,
-* Appliquer nos conditions d’utilisation.
-Une fois vos données jugées inutiles ou à l’expiration des délais légaux de conservation, elles seront supprimées ou anonymisées de manière sécurisée.
-5. Sécurité
-Nous mettons en place des mesures de sécurité techniques et organisationnelles pour protéger vos données contre toute perte, accès non autorisé, divulgation ou modification. Malgré nos efforts, aucune méthode de transmission ou de stockage de données n’est entièrement sécurisée, et nous ne pouvons garantir une sécurité absolue.
-6. Droits de l’Utilisateur
-Conformément à la réglementation applicable, vous disposez de certains droits relatifs à vos données personnelles :
-* Accès et rectification : Vous pouvez demander à consulter, corriger ou mettre à jour les informations personnelles que nous détenons à votre sujet.
-* Suppression : Vous pouvez demander la suppression de votre compte et de vos données associées (voir la procédure de suppression dans la section dédiée de l’application ou sur la page de suppression de compte).
-* Opposition et limitation : Vous pouvez vous opposer à certains traitements de vos données ou demander la limitation de leur utilisation.
-Pour exercer ces droits, veuillez nous contacter à l’adresse contact@i-s-a.io.
-7. Liens Externes
-L’application peut contenir des liens vers des sites web ou services externes. Nous n’assumons aucune responsabilité quant aux pratiques de confidentialité de ces tiers. Nous vous encourageons à consulter leurs politiques de confidentialité.
-8. Modifications de la Présente Politique
-Nous pouvons mettre à jour cette politique de confidentialité pour refléter les modifications de nos pratiques ou de la législation. Nous vous encourageons à consulter régulièrement cette page. En cas de modification importante, nous vous en informerons par le biais de l’application ou par e-mail (si nous disposons de votre adresse).
-9. Contact
-Pour toute question ou préoccupation concernant cette politique de confidentialité, veuillez nous contacter à :
-contact@i-s-a.io
-Nous sommes déterminés à protéger votre vie privée et à traiter vos données avec soin, transparence et respect.
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Confidentialité</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 20px;
+            line-height: 1.5;
+        }
+        h1, h2, h3 {
+            font-weight: bold;
+        }
+        h1 {
+            margin-top: 0;
+        }
+        ul {
+            list-style-type: disc;
+            margin-left: 40px;
+        }
+        hr {
+            margin: 40px 0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Règles de Confidentialité de l’application Cam Detect</h1>
+    <p><strong>Date de dernière mise à jour :</strong> 18/12/2024</p>
+    <p>
+        La présente politique de confidentialité décrit comment l’application <strong>Cam Detect</strong> 
+        (développée par Guyllaume M / Industrial Solutions & Applications) collecte, utilise, 
+        conserve et protège vos informations lorsque vous utilisez nos services. Nous nous engageons 
+        à respecter et protéger votre vie privée conformément aux législations et réglementations en vigueur.
+    </p>
+
+    <hr>
+
+    <h2>1. Informations Collectées</h2>
+    <h3>Données fournies par l’utilisateur :</h3>
+    <ul>
+        <li><strong>Informations de compte :</strong> Lors de la création d’un compte, nous pouvons collecter 
+            votre adresse e-mail et, le cas échéant, un nom d’utilisateur, afin de vous authentifier et vous 
+            offrir une expérience personnalisée.</li>
+        <li><strong>Demandes d’assistance :</strong> Si vous nous contactez pour de l’assistance (par e-mail 
+            ou via un formulaire), nous pouvons enregistrer votre nom, votre adresse e-mail, et toute autre 
+            information volontairement communiquée.</li>
+    </ul>
+
+    <h3>Données techniques :</h3>
+    <ul>
+        <li><strong>Informations sur l’appareil :</strong> Nous pouvons recueillir des informations sur le 
+            type d’appareil, le système d’exploitation, la langue et des identifiants techniques non sensibles 
+            pour assurer le bon fonctionnement de l’application.</li>
+        <li><strong>Journal des activités :</strong> L’application peut consigner certaines actions (par exemple, 
+            un scan réseau) afin de diagnostiquer des problèmes techniques, d’améliorer la qualité du service, 
+            et de détecter d’éventuelles utilisations malveillantes.</li>
+    </ul>
+
+    <hr>
+
+    <h2>2. Utilisation des Données</h2>
+    <p>Nous utilisons vos informations uniquement aux fins suivantes :</p>
+    <ul>
+        <li><strong>Fournir et améliorer nos services :</strong> Les données collectées servent à assurer le 
+            fonctionnement normal de l’application, améliorer ses fonctionnalités, corriger les bugs et optimiser 
+            l’expérience utilisateur.</li>
+        <li><strong>Support technique et assistance :</strong> Les informations recueillies lors de vos demandes 
+            d’assistance nous permettent de mieux répondre à vos questions et d’améliorer la qualité de notre support.</li>
+        <li><strong>Conformité légale :</strong> Le cas échéant, nous pouvons conserver ou divulguer certaines données 
+            pour nous conformer à la loi, aux règlements, aux procédures judiciaires ou à une demande gouvernementale.</li>
+    </ul>
+
+    <hr>
+
+    <h2>3. Partage et Divulgation des Données</h2>
+    <p>
+        Nous ne vendons pas, ne louons pas et ne partageons pas vos informations personnelles avec des tiers 
+        à des fins commerciales. Nous pouvons toutefois partager certaines données avec :
+    </p>
+    <ul>
+        <li><strong>Prestataires de services :</strong> Certains tiers de confiance (hébergeurs, services de maintenance, 
+            outils d’analyse de performances) peuvent avoir accès à des données techniques, strictement nécessaires à 
+            la fourniture et l’amélioration de nos services. Ces tiers sont soumis à des obligations contractuelles 
+            strictes en matière de confidentialité et de sécurité.</li>
+        <li><strong>Obligations légales :</strong> Nous pouvons divulguer des informations si la loi l’exige, par 
+            exemple en réponse à une décision de justice, une assignation à comparaître ou une autre procédure légale.</li>
+    </ul>
+
+    <hr>
+
+    <h2>4. Conservation des Données</h2>
+    <p>
+        Nous conservons vos données personnelles aussi longtemps que nécessaire pour :
+    </p>
+    <ul>
+        <li>Fournir nos services,</li>
+        <li>Répondre aux demandes d’assistance,</li>
+        <li>Respecter nos obligations légales,</li>
+        <li>Résoudre des litiges,</li>
+        <li>Appliquer nos conditions d’utilisation.</li>
+    </ul>
+    <p>
+        Une fois vos données jugées inutiles ou à l’expiration des délais légaux de conservation, elles seront 
+        supprimées ou anonymisées de manière sécurisée.
+    </p>
+
+    <hr>
+
+    <h2>5. Sécurité</h2>
+    <p>
+        Nous mettons en place des mesures de sécurité techniques et organisationnelles pour protéger vos données 
+        contre toute perte, accès non autorisé, divulgation ou modification. Malgré nos efforts, aucune méthode 
+        de transmission ou de stockage de données n’est entièrement sécurisée, et nous ne pouvons garantir une 
+        sécurité absolue.
+    </p>
+
+    <hr>
+
+    <h2>6. Droits de l’Utilisateur</h2>
+    <p>
+        Conformément à la réglementation applicable, vous disposez de certains droits relatifs à vos données personnelles :
+    </p>
+    <ul>
+        <li><strong>Accès et rectification :</strong> Vous pouvez demander à consulter, corriger ou mettre à jour 
+            les informations personnelles que nous détenons à votre sujet.</li>
+        <li><strong>Suppression :</strong> Vous pouvez demander la suppression de votre compte et de vos données 
+            associées (voir la procédure de suppression dans la section dédiée de l’application ou sur la page de 
+            suppression de compte).</li>
+        <li><strong>Opposition et limitation :</strong> Vous pouvez vous opposer à certains traitements de vos données 
+            ou demander la limitation de leur utilisation.</li>
+    </ul>
+    <p>
+        Pour exercer ces droits, veuillez nous contacter à l’adresse : <a href="mailto:contact@i-s-a.io">contact@i-s-a.io</a>.
+    </p>
+
+    <hr>
+
+    <h2>7. Liens Externes</h2>
+    <p>
+        L’application peut contenir des liens vers des sites web ou services externes. Nous n’assumons aucune 
+        responsabilité quant aux pratiques de confidentialité de ces tiers. Nous vous encourageons à consulter 
+        leurs politiques de confidentialité.
+    </p>
+
+    <hr>
+
+    <h2>8. Modifications de la Présente Politique</h2>
+    <p>
+        Nous pouvons mettre à jour cette politique de confidentialité pour refléter les modifications de nos pratiques 
+        ou de la législation. Nous vous encourageons à consulter régulièrement cette page. En cas de modification 
+        importante, nous vous en informerons par le biais de l’application ou par e-mail (si nous disposons de votre adresse).
+    </p>
+
+    <hr>
+
+    <h2>9. Contact</h2>
+    <p>
+        Pour toute question ou préoccupation concernant cette politique de confidentialité, veuillez nous contacter à :
+        <a href="mailto:contact@i-s-a.io">contact@i-s-a.io</a>
+    </p>
+    <p>
+        Nous sommes déterminés à protéger votre vie privée et à traiter vos données avec soin, 
+        transparence et respect.
+    </p>
+</body>
 </html>
