--- a/suppresion.html
+++ b/suppresion.html
@@ -1,35 +1,114 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title>Suppression de votre compte et de vos données associées à l’application Cam Detect</title>
-    </head>
-    <body>
-      Bienvenue sur la page officielle dédiée à la suppression de votre compte et des données associées à l’application Cam Detect, développée par Guyllaume M / Industrial Solutions & Applications. Nous attachons une grande importance à la protection de votre vie privée. Si vous décidez de ne plus utiliser notre service et souhaitez supprimer votre compte et les données qui y sont liées, veuillez suivre les étapes ci-dessous.
-Étapes à suivre pour demander la suppression de votre compte
-1. Identification du compte :
-Assurez-vous de disposer de l’adresse e-mail utilisée lors de la création de votre compte. Vous aurez besoin de cette information pour que nous puissions traiter votre demande.
-2. Soumettre une demande de suppression :
-Envoyez un e-mail depuis l’adresse utilisée pour votre compte Cam Detect à l’adresse suivante :
-contact@i-s-a.io
-En objet, indiquez : « Demande de suppression de compte Cam Detect ».
-3. Contenu du message :
-Dans le corps de l’e-mail, précisez clairement :
-    * L’adresse e-mail associée au compte
-    * Une demande explicite de suppression de toutes vos données liées à Cam Detect
-4. Confirmation de réception :
-Dès que nous aurons reçu votre demande, nous vous enverrons un e-mail de confirmation. Cette réponse vous informera de la prise en compte de votre demande.
-5. Délai de traitement :
-Le traitement de votre demande de suppression se fait généralement sous 7 à 14 jours ouvrés. Une fois la procédure finalisée, votre compte ainsi que toutes les données personnelles qui y sont liées seront supprimés de nos serveurs, à l’exception de celles que nous sommes légalement tenus de conserver pendant une durée limitée (par exemple, à des fins comptables ou juridiques). Dans ce cas, nous conserverons uniquement les données strictement nécessaires, et ce, pour la durée imposée par la loi.
-Types de données supprimées
-La suppression de votre compte entraîne la suppression des informations suivantes :
-* Vos identifiants de connexion (nom d’utilisateur, mot de passe, adresse e-mail)
-Données conservées
-Certaines données peuvent être conservées temporairement, conformément aux obligations légales ou réglementaires. Par exemple, des enregistrements techniques, des journaux d’activité ou des informations comptables peuvent être conservés le temps requis par la loi, généralement quelques semaines à quelques mois, avant d’être définitivement supprimés.
-Assistance supplémentaire
-Si vous avez des questions, rencontrez des difficultés ou souhaitez obtenir plus d’informations sur la protection de vos données, n’hésitez pas à nous contacter :
-* Par e-mail : contact@i-s-a.io
-* Via notre formulaire d’assistance sur https://www.i-s-a.io/contact
-Nous nous engageons à vous accompagner dans cette démarche et à traiter votre demande de manière transparente et conforme à la réglementation en vigueur sur la protection des données personnelles.
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Suppression de votre compte et de vos données associées à l’application Cam Detect</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 20px;
+            line-height: 1.5;
+        }
+        h1, h2 {
+            font-weight: bold;
+        }
+        h1 {
+            margin-top: 0;
+        }
+        ul {
+            list-style-type: disc;
+            margin-left: 40px;
+        }
+        ol {
+            list-style-type: decimal;
+            margin-left: 40px;
+        }
+        hr {
+            margin: 40px 0;
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <h1>Suppression de votre compte et de vos données associées à l’application Cam Detect</h1>
+    <p>
+        Bienvenue sur la page officielle dédiée à la suppression de votre compte et des données associées 
+        à l’application <strong>Cam Detect</strong>, développée par Guyllaume M / Industrial Solutions & Applications. 
+        Nous attachons une grande importance à la protection de votre vie privée. Si vous décidez de ne plus utiliser 
+        notre service et souhaitez supprimer votre compte et les données qui y sont liées, veuillez suivre les étapes ci-dessous.
+    </p>
+
+    <hr>
+
+    <h2>Étapes à suivre pour demander la suppression de votre compte</h2>
+    <ol>
+        <li>
+            <strong>Identification du compte :</strong> Assurez-vous de disposer de l’adresse e-mail utilisée lors 
+            de la création de votre compte. Vous aurez besoin de cette information pour que nous puissions traiter votre demande.
+        </li>
+        <li>
+            <strong>Soumettre une demande de suppression :</strong> Envoyez un e-mail depuis l’adresse utilisée pour 
+            votre compte Cam Detect à l’adresse suivante : 
+            <a href="mailto:contact@i-s-a.io">contact@i-s-a.io</a>.  
+            <br>
+            En objet, indiquez : « Demande de suppression de compte Cam Detect ».
+        </li>
+        <li>
+            <strong>Contenu du message :</strong> Dans le corps de l’e-mail, précisez clairement :
+            <ul>
+                <li>L’adresse e-mail associée au compte</li>
+                <li>Une demande explicite de suppression de toutes vos données liées à Cam Detect</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Confirmation de réception :</strong> Dès que nous aurons reçu votre demande, nous vous enverrons un 
+            e-mail de confirmation. Cette réponse vous informera de la prise en compte de votre demande.
+        </li>
+        <li>
+            <strong>Délai de traitement :</strong> Le traitement de votre demande de suppression se fait généralement sous 
+            7 à 14 jours ouvrés. Une fois la procédure finalisée, votre compte ainsi que toutes les données personnelles 
+            qui y sont liées seront supprimés de nos serveurs, à l’exception de celles que nous sommes légalement tenus de 
+            conserver pendant une durée limitée (par exemple, à des fins comptables ou juridiques). Dans ce cas, nous 
+            conserverons uniquement les données strictement nécessaires, et ce, pour la durée imposée par la loi.
+        </li>
+    </ol>
+
+    <hr>
+
+    <h2>Types de données supprimées</h2>
+    <p>La suppression de votre compte entraîne la suppression des informations suivantes :</p>
+    <ul>
+        <li>Vos identifiants de connexion (nom d’utilisateur, mot de passe, adresse e-mail)</li>
+    </ul>
+
+    <h2>Données conservées</h2>
+    <p>
+        Certaines données peuvent être conservées temporairement, conformément aux obligations légales ou réglementaires. 
+        Par exemple, des enregistrements techniques, des journaux d’activité ou des informations comptables peuvent être 
+        conservés le temps requis par la loi, généralement quelques semaines à quelques mois, avant d’être définitivement supprimés.
+    </p>
+
+    <hr>
+
+    <h2>Assistance supplémentaire</h2>
+    <p>
+        Si vous avez des questions, rencontrez des difficultés ou souhaitez obtenir plus d’informations sur la protection 
+        de vos données, n’hésitez pas à nous contacter :
+    </p>
+    <ul>
+        <li>Par e-mail : <a href="mailto:contact@i-s-a.io">contact@i-s-a.io</a></li>
+        <li>Via notre formulaire d’assistance sur <a href="https://www.i-s-a.io/contact" target="_blank">https://www.i-s-a.io/contact</a></li>
+    </ul>
+    <p>
+        Nous nous engageons à vous accompagner dans cette démarche et à traiter votre demande de manière transparente et 
+        conforme à la réglementation en vigueur sur la protection des données personnelles.
+    </p>
+</body>
 </html>
